# media-sync

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
src/media_sync/: __init__.py  cli.py  config.py  config_loader.py  obsidian.py  sync.py
src/media_sync/client/: __init__.py  base.py  jellyfin.py  obsidian.py  radarr.py  sonarr.py
src/media_sync/models/: media.py
src/media_sync/sync/: __init__.py  engine.py
templates/: media_note.md
tests/: test_cli.py  test_config_loader.py  test_config_sonarr_radarr.py  test_jellyfin.py  test_obsidian.py  test_sonarr_radarr.py  test_sync.py
